--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "^0.66.4",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-iconly": "^1.0.12",
+    "react-native-reanimated": "^2.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/runtime": "^7.16.5",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@types/react-native": "^0.66.9",
     "babel-jest": "^27.4.5",
     "eslint": "^8.5.0",
     "jest": "^27.4.5",
