--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
