--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-webview": "^11.15.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
